examples/test/testpolicy8665.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8665
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key34: value41
      key30: value32
      key44: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value47
      podSelector:
        matchLabels:
          key20: value0
          key4: value36
          key40: value45
